src/test/deca/syntax/invalid/syntax-oubliPointVirgule.deca
// Description:
//    On a oublié le point virgule
//
// Resultats:
//    token recognition error at: '''


//
// Historique:
//    cree le 11/01/2024


{

println("Shisui Uchiwa")

}